Draw red sphere and blue plane together.

--- a/conf/config_glwidget.json
+++ b/conf/config_glwidget.json
@@ -1,15 +1,16 @@
 {
 	"FPS" : 60,
-	"lightPosWorld" : [0.0, 20.0, 10.0],
+	"lightPosWorld" : [20.0, 30.0, 0.0],
 	"lightColor" : [1.0, 1.0, 1.0],
-	"lightPower" : 50.0,
+	"lightPower" : 150.0,
 	"backgroundColor" : [0.2, 0.2, 0.2, 1],
 	"materialDiffuseColor" : [1.0, 0.0, 0.0],
 	"materialAmbientColorCoeffs" : [0.1, 0.1, 0.1],
 	"materialSpecularColor" : [0.3, 0.3, 0.3],
-	"initialCameraPosition" : [0.0, 0.0, 30.0],
-	"initialHorzAngle" : 90.0,
-	"initialVertAngle" : 90.0,
+	"planeDiffuseColor" : [0.0, 0.0, 1.0],
+	"initialCameraPosition" : [0.0, 30.0, 30.0],
+	"initialHorzAngle" : 135.0,
+	"initialVertAngle" : -10.0,
 	"fov" : 60,
 	"speed" : 20,
 	"mouseSpeed" : 0.3,
