Material diffuse color ---> ball diffuse color

--- a/conf/config_glwidget.json
+++ b/conf/config_glwidget.json
@@ -4,9 +4,9 @@
 	"lightColor" : [1.0, 1.0, 1.0],
 	"lightPower" : 150.0,
 	"backgroundColor" : [0.2, 0.2, 0.2, 1],
-	"materialDiffuseColor" : [1.0, 0.0, 0.0],
-	"materialAmbientColorCoeffs" : [0.1, 0.1, 0.1],
+	"materialAmbientColorCoeffs" : [0.2, 0.2, 0.2],
 	"materialSpecularColor" : [0.3, 0.3, 0.3],
+	"ballDiffuseColor" : [1.0, 0.0, 0.0],
 	"planeDiffuseColor" : [0.0, 0.0, 1.0],
 	"initialCameraPosition" : [0.0, 30.0, 30.0],
 	"initialHorzAngle" : 135.0,
