Draw box instead of plane.

--- a/conf/config_glwidget.json
+++ b/conf/config_glwidget.json
@@ -16,5 +16,5 @@
 	"mouseSpeed" : 0.3,
 	"mouseWheelSpeed" : 5,
 	"trajectoryObjFile" : "models/sphere.obj",
-	"planeObjFile" : "models/plane.obj"
+	"planeObjFile" : "models/box.obj"
 }
