Draw the room as a bounding box with green origin.

--- a/conf/config_glwidget.json
+++ b/conf/config_glwidget.json
@@ -1,17 +1,20 @@
 {
 	"FPS" : 60,
 	"trailLength" : 50,
-	"lightPosWorld" : [0.0, 40.0, 0.0],
+	"lightPosWorld" : [-10, 15, -15],
 	"lightColor" : [1.0, 1.0, 1.0],
 	"lightPower" : 300.0,
-	"backgroundColor" : [0.4, 0.4, 0.4, 1],
+	"backgroundColor" : [0.45, 0.45, 0.45, 1],
 	"materialAmbientColorCoeffs" : [0.25, 0.25, 0.25],
 	"materialSpecularColor" : [0.3, 0.3, 0.3],
-	"ballDiffuseColor" : [1.0, 1.0, 0.0, 1.0],
-	"boxDiffuseColor" : [0.0, 0.0, 1.0, 0.5],
-	"initialCameraPosition" : [30.0, 35.0, 40.0],
-	"initialHorzAngle" : 220.0,
-	"initialVertAngle" : -20.0,
+	"ballDiffuseColor" : [1.0, 0.0, 0.0, 1.0],
+	"originDiffuseColor" : [0.0, 1.0, 0.0, 1.0],
+	"ballXYZLength" : [0.1, 0.1, 0.1],
+	"boxDiffuseColor" : [0.0, 0.0, 1.0, 0.3],
+	"boxXYZLength" : [6.2, 7.2, 3.1], 
+	"initialCameraPosition" : [-13, 8, -7],
+	"initialHorzAngle" : 51,
+	"initialVertAngle" : -18.0,
 	"fov" : 60,
 	"speed" : 20,
 	"mouseSpeed" : 0.3,
