Draw small, red arrow at origin.

--- a/conf/config_glwidget.json
+++ b/conf/config_glwidget.json
@@ -20,5 +20,6 @@
 	"mouseSpeed" : 0.3,
 	"mouseWheelSpeed" : 5,
 	"trajectoryObjFile" : "models/sphere.obj",
-	"boxObjFile" : "models/box.obj"
+	"boxObjFile" : "models/box.obj",
+	"arrowObjFile" : "models/arrow.obj"
 }
