Refactor code to share uniformIDs across GLObjects.
With the sharing of uniformIDs, GLObject.paint method is easier to use;
it takes an additional color argument to specify the color. Now, a
single GLObject can be used to draw the vertex data at arbitrary
positions, rotations and color.

--- a/conf/config_glwidget.json
+++ b/conf/config_glwidget.json
@@ -9,6 +9,9 @@
 	"materialSpecularColor" : [0.3, 0.3, 0.3],
 	"ballDiffuseColor" : [1.0, 0.0, 0.0, 1.0],
 	"originDiffuseColor" : [0.0, 1.0, 0.0, 1.0],
+	"xAxisColor" : [1, 0, 0, 1],
+	"yAxisColor" : [0, 1, 0, 1],
+	"zAxisColor" : [0, 0, 1, 1],
 	"ballXYZLength" : [0.1, 0.1, 0.1],
 	"boxDiffuseColor" : [0.0, 0.0, 1.0, 0.3],
 	"boxXYZLength" : [6.2, 7.2, 3.1], 
